--- a/app/src/main/res/layout/activity_basic_phrases.xml
+++ b/app/src/main/res/layout/activity_basic_phrases.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/helloBP"
+            android:id="@+id/hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -22,7 +22,7 @@
             android:text="Hello" />
 
         <Button
-            android:id="@+id/howAreYouBP"
+            android:id="@+id/howareyou"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
@@ -39,7 +39,7 @@
             android:text="How are you?" />
 
         <Button
-            android:id="@+id/goodEveningBP"
+            android:id="@+id/goodevening"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -56,7 +56,7 @@
             android:text="Good Evening" />
 
         <Button
-            android:id="@+id/pleaseBP"
+            android:id="@+id/please"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
@@ -68,7 +68,7 @@
             android:text="Please" />
 
         <Button
-            android:id="@+id/myNameIsBP"
+            android:id="@+id/mynameis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -80,7 +80,7 @@
             android:text="My name is..." />
 
         <Button
-            android:id="@+id/doYouSpeakEnglishBP"
+            android:id="@+id/doyouspeakenglish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
@@ -97,7 +97,7 @@
             android:text="Do you &#10; speak English?" />
 
         <Button
-            android:id="@+id/welcomeBP"
+            android:id="@+id/welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -114,7 +114,7 @@
             android:text="Welcome" />
 
         <Button
-            android:id="@+id/iLiveInBP"
+            android:id="@+id/ilivein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
