--- a/app/src/main/res/layout/activity_time_counter.xml
+++ b/app/src/main/res/layout/activity_time_counter.xml
@@ -22,9 +22,10 @@
         android:text="0:30"
         android:textColor="@android:color/black"
         android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_editor_absoluteY="128dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonTC"
